--- a/tools/random-num-gen/random_num_gen.html
+++ b/tools/random-num-gen/random_num_gen.html
@@ -13,7 +13,8 @@
     />
 
     <!-- ======================== CSS ======================= -->
-    <link rel="stylesheet" href="./css/random_num_gen.css" />
+    <!-- <link rel="stylesheet" href="./css/random_num_gen.css" /> -->
+    <link rel="stylesheet" href="../../dist/css/random_num_gen.css" />
   </head>
   <body>
     <!-- ======================== HEADER ======================= -->
